fix overflow/ zindex

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,6 @@
 body {
     margin: 0;
     font-family: 'IBM Plex Sans', sans-serif;
+    background-color: #dae0e6 !important;
+    background-repeat: repeat;
 }
